# sp_lite

./: CMakeLists.txt  FDTDBorisMain.c  README.md  spAlogorithm.c  spAlogorithm.h  spConfig.h.in  spDataType.c  spDataType.h  spFDTD.c  spFDTD.h  spField.c  spField.h  spIOStream.c  spIOStream.h  spMPI.c  spMPI.h  spMacro.h  spMesh.c  spMesh.h  spMisc.c  spMisc.h  spObject.c  spObject.h  spPICBoris.c  spPICBoris.h  spParallel.c  spParallel.h  spParticle.c  spParticle.h
detail/: spBoris.impl.h  spFDTD.impl.h
detail/cuda/: spMPI.cu  spParallelCUDA.h
detail/openmp/: spParallelOPENMP.h  spParticle.c  spRandomKernel.c
