cmake_minimum_required(VERSION 2.8)
SET(CMAKE_VERBOSE_MAKEFILE ON)

PROJECT(sp_lite C)
INCLUDE(local_conf.cmake)


SET(CMAKE_C_FLAGS "-std=c11 ")


#SET(MPI_C_COMPILER /pkg/openmpi/1.10.3-gpu/bin/mpicc)
#SET(MPI_CXX_COMPILER /pkg/openmpi/1.10.3-gpu/bin/mpicxx)


FIND_PACKAGE(MPI REQUIRED)
IF (MPI_FOUND)
    INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
    ADD_DEFINITIONS(-DOMPI_SKIP_MPICXX)
    SET(SKIP_MPICXX "OMPI_SKIP_MPICXX")
ENDIF (MPI_FOUND)


SET(HDF5_PREFER_PARALLEL ON)
#SET(HDF5_USE_STATIC_LIBRARIES OFF)

FIND_PACKAGE(HDF5 1.8 COMPONENTS C HL REQUIRED)

INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
IF (HDF5_IS_PARALLEL)
    ADD_DEFINITIONS(-DUSE_PARALLEL_IO -DH5_HAVE_PARALLEL)
ENDIF (HDF5_IS_PARALLEL)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/spConfig.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/include/sp_lite/spConfig.h @ONLY)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/include/)

#add_subdirectory(detail)

FILE(GLOB sp_lite_SRC ./*.c)

ADD_EXECUTABLE(sp_boris ${sp_lite_SRC})
TARGET_LINK_LIBRARIES(sp_boris ${MPI_LIBRARIES} ${HDF5_LIBRARIES})
#ADD_EXECUTABLE(sp_boris_gpu ${sp_lite_SRC})
#TARGET_LINK_LIBRARIES(sp_boris_gpu pthread sp_lite_cuda   mpi gomp  )
